[TASK-1] Fix: Create cross browser focus for all form elements and links. Visible focus should be contrasting with 2px width outline.

--- a/css/styles.css
+++ b/css/styles.css
@@ -176,3 +176,21 @@ li {
   height: 40px;
   background-size: contain;
 }
+
+.menu-list .tag {
+  border-radius: 4px;
+  display: inline-flex;
+}
+
+.logo-link:focus,
+.button:focus,
+.link:focus,
+.select-field:focus,
+.textarea:focus
+.input:focus,
+input:focus,
+select:focus,
+textarea:focus {
+  box-shadow: none !important;
+  outline: 2px solid blue !important;
+}
